fix photo on iphone

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -580,7 +580,7 @@
       width: 100%
       .after
         left: 40px
-        top: 40px
+        top: 54px
     &__date
       display: block
       font-size: 18px
@@ -623,6 +623,8 @@
       filter: blur(300px)
   .main
     &__img
+      img
+        height: 90vw
       &::before
         width: 100%
-        bottom: -220px
+        bottom: -240px
